@@ -1,3 +1,7 @@
+### 2022-08-31
+
+1. Add SkyLayer component
+
 ### 2022-08-24
 
 1. Add observer characterData in VPopup
